[package]
name = "rx8900"
version = "0.1.0"
edition = "2021"
authors = ["Tasuku Suzuki  <stasuku@gmail.com>"]
description = "A rust device driver for the Epson RX8900SA/CE I2C-Bus Interface Real Time Clock Module."
keywords = ["no-std", "rx8900", "rtc", "embedded", "embedded-hal-driver"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/task-jp/rx8900-rs"
categories  = ["embedded", "hardware-support", "no-std"]

include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
chrono = { version = "0.4.34", default-features = false }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
embedded-alloc = { version = "0.5.1", optional = true }
embedded-hal = "0.2.6"
heapless = "0.8"
panic-probe = { version = "0.3", optional = true }
rp-pico = { version = "0.9", optional = true }
usb-device = { version = "0.3.2", optional = true }
usbd-serial = { version = "0.2.1", optional = true }

[features]
rp2040 = ["cortex-m", "cortex-m-rt", "embedded-alloc", "panic-probe", "rp-pico", "usb-device", "usbd-serial"]

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3

[[example]]
name = "rpi_pico"
required-features = ["rp2040"]
crate-type = ["bin"]
