[package]
name = "rx8900"
version = "0.1.1"
edition = "2021"
authors = ["Tasuku Suzuki  <stasuku@gmail.com>"]
description = "A rust device driver for the Epson RX8900SA/CE I2C-Bus Interface Real Time Clock Module."
documentation = "https://docs.rs/rx8900"
keywords = ["no-std", "rx8900", "rtc", "embedded", "embedded-hal-driver"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/task-jp/rx8900-rs"
categories  = ["embedded", "hardware-support", "no-std"]

include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
chrono = { version = "0.4.34", default-features = false }
embedded-hal = "0.2.6"
heapless = "0.8"

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-alloc = "0.5.1"
panic-probe = "0.3"
rp-pico = "0.9"
usb-device = "0.3.2"
usbd-serial = "0.2.1"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
